fixed alignment

--- a/resource/sass/sass/style.scss
+++ b/resource/sass/sass/style.scss
@@ -866,7 +866,7 @@ body.front.three-column #primary {
 
 #header-image {
 	img {
-		margin-left: 0;
+		margin-left: 15px;
 		
 	}
 }
